Bug 1658991: Don't dev crash in LockD3DTexture when device has been removed. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D110929